<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="center_horizontal|bottom"
            app:expandedTitleMarginBottom="20dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleEnabled="false"
            app:toolbarId="@id/toolbar">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIconTint="?attr/colorOnSurface"
                app:titleTextColor="?attr/colorOnSurface" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:animateLayoutChanges="true">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="?attr/colorPrimary"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/grey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/Theme.TextAppearance.TitleMedium"
                        android:layout_marginStart="10dp"
                        android:text="@string/details"
                        android:textColor="?attr/colorPrimaryVariant"
                        app:layout_constraintBottom_toBottomOf="@id/view"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/view"
                        app:layout_constraintTop_toTopOf="@id/view" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/userLabel"
                        style="@style/Theme.TextAppearance.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="?attr/colorOnSurface"
                        android:text="@string/user"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/view" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/user"
                        style="@style/Theme.TextAppearance.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="?attr/colorOnSurface"
                        app:layout_constraintStart_toEndOf="@id/userLabel"
                        app:layout_constraintTop_toBottomOf="@id/view" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/downloadsLabel"
                        style="@style/Theme.TextAppearance.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="?attr/colorOnSurface"
                        android:text="@string/downloads"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/userLabel" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/downloads"
                        style="@style/Theme.TextAppearance.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="?attr/colorOnSurface"
                        app:layout_constraintStart_toEndOf="@id/downloadsLabel"
                        app:layout_constraintTop_toBottomOf="@id/user" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/likesLabel"
                        style="@style/Theme.TextAppearance.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="?attr/colorOnSurface"
                        android:text="@string/likes"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/downloadsLabel" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/likes"
                        style="@style/Theme.TextAppearance.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="?attr/colorOnSurface"
                        app:layout_constraintStart_toEndOf="@id/likesLabel"
                        app:layout_constraintTop_toBottomOf="@id/downloadsLabel" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/commentsLabel"
                        style="@style/Theme.TextAppearance.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="?attr/colorOnSurface"
                        android:text="@string/comments"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/likesLabel" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/comments"
                        style="@style/Theme.TextAppearance.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="?attr/colorOnSurface"
                        app:layout_constraintStart_toEndOf="@id/commentsLabel"
                        app:layout_constraintTop_toBottomOf="@id/likesLabel" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tagsLabel"
                        style="@style/Theme.TextAppearance.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="?attr/colorOnSurface"
                        android:text="@string/tags"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/commentsLabel" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tags"
                        style="@style/Theme.TextAppearance.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="?attr/colorOnSurface"
                        app:layout_constraintStart_toEndOf="@id/tagsLabel"
                        app:layout_constraintTop_toBottomOf="@id/commentsLabel" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="10dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="10dp" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>